<resources>
    <string name="app_name">Donantes De Sangre</string>
    <string name="buscar_donante">Buscar donante</string>
    <string name="agegar_donante">Agregar donante</string>
    <string name="title_activity_agegar_donante">AgegarDonanteActivity</string>
    <string name="action_settings">Settings</string>
    <string name="informacion">Información</string>
    <string name="agregar_donacion">Agregar donación</string>
    <string name="estadistica">Estadística</string>
    <string name="exportar">Exportar datos</string>
    <string name="importar">Importar datos</string>
    <string name="direccion">Dirección</string>
    <string name="nacimiento">Nacimiento</string>
    <string name="nombre">Nombre</string>
    <string name="e_mail">E-Mail</string>
    <string name="provincia">Provincia</string>
    <string name="telefono">Teléfono</string>
    <string name="localidad">Localidad</string>
    <string name="agregado_correcto">Donante agregado</string>
    <string name="falta_nombre">Falta completar el nombre</string>
    <string name="persona_existente">La persona ya existe</string>
    <string name="archivo_interno">donantesDeSangre.json</string>
    <string name="tabla_compatibilidad">Compatibilidad de la sangre</string>
    <string name="title_activity_calendario">CalendarioActivity</string>
    <string name="ok">OK</string>
    <string name="sangre">Sangre</string>
    <string name="crear_yo">Primero hace falta cargar tus datos antes de crear nuevos donantes</string>
    <string name="crear_yo_title">Completa con tus datos</string>
    <string name="edad">Edad</string>
    <string name="puede_donar_a">Puede donar a</string>
    <string name="puede_recibir_de">Puede recibir de</string>
    <string name="edad_mayor_a">Edad mayor a</string>
    <string name="edad_menor_a">Edad menor a</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="es_favorito">Es favorito</string>
    <string name="error_crear_donante">Error al crear a la persona</string>
    <string name="persona_guardada">Persona guardada</string>
    <string name="pergunta_eliminar_donante">Seguro que desea eliminar al donante?</string>
    <string name="pergunta_eliminar_donante_title">Seguro?</string>
    <string name="pergunta_que_buscar_title">Que buscar?</string>
    <string name="pergunta_que_buscar">Buscar para que esta persona:</string>
    <string name="done">Done</string>
    <string name="reciba">Reciba</string>
    <string name="editando_yo">Tus datos siempre son favorito</string>
    <string name="mis_datos">Mis Datos</string>
    <string name="listar_todos">Listar todos</string>
    <string name="ver_donaciones">Ver donaciones</string>
    <string name="tiene_sangre">Tiene sangre</string>
    <string name="solo_favoritos">Solo favoritos</string>
    <string name="dono_hace_mas">Donó hace más de</string>
    <string name="ultima_donacion">Última donación</string>
    <string name="realizo_donaciones">Realizó las siguientes donaciones:</string>
    <string name="dono_a_las_personas">Donó a las siguientes personas:</string>
    <string name="fecha">Fecha</string>
    <string name="donador">Donador</string>
    <string name="receptor">Receptor</string>
    <string name="falta_donador_receptor">Falta donador o el receptor</string>
    <string name="falta_donador">Falta donador</string>
    <string name="falta_receptor">Falta receptor</string>
    <string name="sin_receptor_especifico">Sin receptor específico</string>
    <string name="donacion_agregada">Donación agregada</string>
    <string name="pergunta_donacion_no_compatible">El donador y el receptor no son compatibles para la donación, continuar de todas formas?</string>
    <string name="pergunta_donacion_no_compatible_title">Sangre no compatible</string>
    <string name="edad_sin_completar">Edad sin completar</string>
    <string name="edad_mal_formada">Edad mal escrita</string>
    <string name="pergunta_eliminar_donacion_title">Seguro?</string>
    <string name="pergunta_eliminar_donacion">Desea eliminar la donación?</string>
    <string name="donacion_guardada">Donación guardada</string>
    <string name="informacion_mensage">Nicolás Jorge Dato\nLU: 113101\n`Cursada: 2017</string>
    <string name="tipo_de_donacion">Tipo de donacion:</string>
    <string name="compatible">Compatible</string>
    <string name="exportado">Datos guardados</string>
    <string name="fallo_exportado">Error al guardar los datos</string>
    <string name="fallo_importado">Error al leer los datos</string>
    <string name="importado">Datos importados</string>
    <string name="filtro_para_estadistica">Filtro para la estadística</string>
    <string name="cantidad">Cantidad</string>
    <string-array name="meses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string-array name="sangres">
        <item>O-</item>
        <item>O+</item>
        <item>A-</item>
        <item>A+</item>
        <item>B-</item>
        <item>B+</item>
        <item>AB-</item>
        <item>AB+</item>
    </string-array>
    <string-array name="ultima_donacion">
        <item>Más de 1 mes</item>
        <item>Más de 2 meses</item>
        <item>Más de 6 meses</item>
        <item>Más de 1 año</item>
        <item>Más de 2 años</item>
    </string-array>
    <string-array name="donadorreceptor">
        <item>Donador:</item>
        <item>Receptor:</item>
    </string-array>
    <string-array name="tipodonacion">
        <item>Sangre completa</item>
        <item>Globulos rojos</item>
        <item>Plasma</item>
    </string-array>
</resources>
